@@ -64,6 +64,7 @@ guint ysize, xsize;
 guint nmines;
 guint fsize, fsc;
 guint minesize;
+guint outrelease, outsetup;
 
 char *fsize2names[] = {
 	N_("Tiny"),
@@ -231,6 +232,7 @@ void do_setup(GtkWidget *widget, gpointer data)
 	ysize  = atoi(gtk_entry_get_text(GTK_ENTRY(yentry)));
         nmines = atoi(gtk_entry_get_text(GTK_ENTRY(mentry)));
         minesize = gtk_spin_button_get_value_as_int(GTK_SPIN_BUTTON(sentry));
+        outrelease = outsetup;
 	fsize  = fsc;
 
 	verify_ranges ();
@@ -251,6 +253,7 @@ void do_setup(GtkWidget *widget, gpointer data)
 	gnome_config_set_int("/gnomine/geometry/nmines", nmines);
 	gnome_config_set_int("/gnomine/geometry/minesize", minesize);
 	gnome_config_set_int("/gnomine/geometry/mode",   fsize);
+	gnome_config_set_int("/gnomine/general/outrelease", outrelease);
 	gnome_config_sync();
 }
 
@@ -280,6 +283,11 @@ void size_radio_callback(GtkWidget *widget, gpointer data)
 	gtk_widget_set_sensitive(cframe, fsc == 3);
 }
 
+void outrelease_callback(GtkWidget *widget, gpointer data)
+{
+    outsetup = !outsetup;
+}
+
 void setup_game(GtkWidget *widget, gpointer data)
 {
         GtkWidget *all_boxes;
@@ -305,6 +313,13 @@ void setup_game(GtkWidget *widget, gpointer data)
 	all_boxes = gtk_vbox_new(FALSE, 5);
 	gtk_container_add(GTK_CONTAINER(setupdialog), all_boxes);
 
+	button = gtk_check_button_new_with_label(_("off square button releases"));
+	if (outrelease) gtk_toggle_button_set_state(GTK_TOGGLE_BUTTON (button), TRUE);
+	gtk_signal_connect(GTK_OBJECT(button), "clicked", GTK_SIGNAL_FUNC(outrelease_callback),
+			   (gpointer) 0);
+	gtk_box_pack_start(GTK_BOX(all_boxes), button, TRUE, TRUE, 0);
+        gtk_widget_show(button);
+        
         cframe = gtk_frame_new(_("Custom size"));
 
 	frame = gtk_frame_new(_("Field size"));
@@ -428,6 +443,7 @@ void setup_game(GtkWidget *widget, gpointer data)
 	gtk_widget_show(all_boxes);
 
         fsc = fsize;
+        outsetup = outrelease;
 
 	gtk_widget_show(setupdialog);
 }
@@ -507,6 +523,8 @@ save_state (GnomeClient        *client,
 	argv[i++] = nstr (xpos);
 	argv[i++] = "-b";
 	argv[i++] = nstr (ypos);
+	argv[i++] = "-o";
+	argv[i++] = nstr (outrelease);
 
 	gnome_client_set_restart_command (client, i, argv);
 	/* i.e. clone_command = restart_command - '--sm-client-id' */
@@ -534,6 +552,9 @@ static int nmines_set;
 
 /* Whether fsize has been set.  */
 static int fsize_set;
+
+/* Whether outrelease has been set.  */
+static int outrelease_set;
 
 /* Some positioning info.  */
 static int set_pos;
@@ -572,6 +593,10 @@ parse_an_arg (int key, char *arg, struct argp_state *state)
 		set_pos |= 2;
 		ypos = atoi (arg);
 		break;
+	case 'o':
+                outrelease_set = 1;
+                outrelease = atoi (arg);;
+		break;
 	case ARGP_KEY_SUCCESS:
 		if (set_pos == 3)
 			gtk_widget_set_uposition (window, xpos, ypos);
@@ -589,6 +614,8 @@ parse_an_arg (int key, char *arg, struct argp_state *state)
 		}
 		if (! fsize_set)
 			fsize  = gnome_config_get_int("/gnomine/geometry/mode=0");
+		if (! outrelease_set)
+			outrelease  = gnome_config_get_int("/gnomine/general/outrelease=1");
 		break;
 		
 	default:
