@@ -49,7 +49,7 @@ struct _GtkMineField {
 	gint cdown;
         guint cdownx;
         guint cdowny;
-	gint bdown;
+	gint bdown[3];
         gint lose;
         gint win;
 	gint multi_mode;
@@ -83,6 +83,7 @@ void gtk_minefield_set_size(GtkMineField *mfield, guint xsize, guint ysize);
 void gtk_minefield_set_mines(GtkMineField *mfield, guint mcount, guint minesize);
 void gtk_minefield_restart(GtkMineField *mfield);
 extern guint minesize;
+extern guint outrelease;
 
 #ifdef __cplusplus
 }
